--- a/AjaxValidation/index.html
+++ b/AjaxValidation/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
 	<meta charset="utf-8" />
@@ -12,19 +12,17 @@
 	<script src="validation.js"></script>
 	<link href="style.css" rel="stylesheet">
 </head>
-
 <body>
-	<form action="ajax.php" method="post" id="register-form">
+	<form action="register.php" method="post" id="register-form">
 		<div class="container">
 			<div class="title">
 				<h1>Регистрация</h1>
 			</div>
-			<input type="text" placeholder="Потребителско име" name="username">
-			<input type="password" placeholder="Парола" name="password">
-			<input type="password" placeholder="Повтори паролата" name="passwordagain">
+			<input type="text" placeholder="Потребителско име" name="username" id="username">
+			<input type="password" placeholder="Парола" name="password" id="password">
+			<input type="password" placeholder="Повтори паролата" name="passwordagain" id="passwordagain">
 			<button type="submit" name="submit" class="buttonreg">Регистрация</button>
 		</div>
 	</form>
 </body>
-
 </html>
